<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UpdateUserActivity"
    android:id="@+id/nestedScrollViewForUpdate">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update User Information"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userUpdateNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_user_name"
            android:textColorHint="@color/colorText"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:inputType="textPersonName"
            android:id="@+id/updateUserName"
            android:layout_marginBottom="10dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userUpdateEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorText"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:inputType="textEmailAddress"
            android:id="@+id/updateEmail"
            android:layout_marginBottom="10dp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/userUpdatePasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorTextHint"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:id="@+id/userUpdatePassword"
            android:layout_marginBottom="10dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userUpdatePhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_phone"
            android:textColorHint="@color/colorTextHint"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:inputType="text|phone"
            android:id="@+id/userUpdatePhone"
            android:layout_marginBottom="10dp"
            />
    </android.support.design.widget.TextInputLayout>
    <!--<android.support.v7.widget.AppCompatSpinner
        android:id="@+id/gender_spinnerUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorBackground"
        />
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/userType_spinnerUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorBackground"
        />-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentBottom="true">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/update"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_update"
                android:textColor="@color/colorText"
                android:background="@color/colorPrimary"
                android:layout_margin="5dp"

                />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/showUpdate"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_show_update"
                android:textColor="@color/colorText"
                android:background="@color/colorPrimary"
                android:layout_margin="5dp"/>
        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>