<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    tools:context=".Activity.SignUpActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/blue"

        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get Started"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Just a few details to get you started"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:layout_marginBottom="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_user_name"
                android:textColorHint="@color/colorText"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="textPersonName"
                android:id="@+id/userName"
                android:layout_marginBottom="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorText"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:layout_marginBottom="10dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorTextHint"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:id="@+id/userPassword"
                android:layout_marginBottom="10dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/userConfirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="@color/colorTextHint"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:id="@+id/userConfirmPassword"
                android:layout_marginBottom="10dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_phone"
                android:textColorHint="@color/colorTextHint"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="text|phone"
                android:id="@+id/userPhone"
                android:layout_marginBottom="10dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorBackground"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/userType_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorBackground"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/colorText"
            android:text="@string/button_sign_up"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorTextHint"

            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/already_a_member_login"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>